Resolve subscripted relations by subscription metadata
The subscription metadata contains all relations belonging to it.
Use this information instead of filtering all tables by the subscription
index setting.